<resources>
    <string-array name="Lados">
        <item>--SELECIONE UM LADO--</item>
        <item>Lado Direito</item>
        <item>Lado Esquerdo</item>
    </string-array>
    <string name="genero">Género</string>
    <string-array name="ArrayGenero">
    <item>--SELECIONE O GÉNERO--</item>
    <item>Homem</item>
    <item>Mulher</item>
</string-array>
    <string name="ResultadoA"><b>Resultado A:</b></string>
    <string name="ResultadoAvaliacao">Resultado da Avaliação"</string>
    <string name="app_name">ErgoDigital</string>
    <string name="action_settings">Settings</string>
    <string name="action_sobre">Sobre</string>
    <string name="title_activity_lista_pessoas">Lista Pessoas</string>
    <string name="title_activity_avaliacao_postural">Avaliacão Postural</string>
    <string name="title_activity_postural_evaluation">Avaliação Postural</string>
    <string name="textBtnCH">Movimentação de Cargas</string>
    <string name="textBtnPA">Avaliação Postural</string>
    <string name="textBtnRM">Movimento Repetitivo</string>
    <string name="textTitle">Tipos de Avaliações Ergonómicas</string>
    <string name="PEA_title">Ferramentas</string>
    <string name="PEA_btn_owas">Sistema OWAS</string>
    <string name="PEA_btn_owas_descricao">(Ovako Working Posture Analysing System)</string>
    <string name="PEA_btn_rula">Sistema RULA</string>
    <string name="PEA_btn_rula_descricao">(Rapid Upper Limb Assessement)</string>
    <string name="PEA_btn_reba">Sistema REBA</string>
    <string name="PEA_btn_reba_descricao">(Rapid Entire Body Assessement)</string>
    <string name="title_activity_sistema_owas">Sistema Owas</string>
    <string name="title_activity_system_owas">Sistema OWAS</string>
    <string name="tvOwasTorso">Torso</string>
    <string-array name="OWAStorso">
        <item>Reto</item>
        <item>Inclinado</item>
        <item>Reto e Torcido</item>
        <item>Inclinado e Torcido</item>
    </string-array>
    <string name="tvOwasBracos">Braços</string>
    <string-array name="OWASbracos">
        <item>Dois braços para baixo</item>
        <item>Um braço para cima</item>
        <item>Dois braços para cima</item>
    </string-array>
    <string name="tvOwasPernas">Pernas</string>
    <string-array name="OWASpernas">
        <item>Duas pernas retas</item>
        <item>Uma perna reta</item>
        <item>Duas pernas flexionadas</item>
        <item>Uma perna flexionada</item>
        <item>Uma perna ajoelhada</item>
        <item>Deslocamento com pernas</item>
        <item>Duas pernas suspensas</item>
    </string-array>
    <string name="tvOwasForca">Força</string>
    <string-array name="OWASforca">
        <item>Até a 10Kg</item>
        <item>de 10Kg a 20Kg </item>
        <item>Superior a 20Kg</item>
    </string-array>
    <string name="OwasResultado1">Não necessita de medidas corretivas</string>
    <string name="OwasResultado2">São necessárias medidas corretivas em um futuro próximo</string>
    <string name="OwasResultado3">São necessárias medidas corretivas o quanto possível</string>
    <string name="OwasResultado4">São necessárias medidas corretivas imediatas</string>
    <string name="title_activity_sistema_rula">Sistema Rula</string>
    <string name="title_activity_sistema_rula2">Sistema Rula</string>
    <string name="title_activity_sistema_rula3">Sistema Rula</string>
    <string name="tvRulaBraco">Braço</string>
    <string-array name="RULAbraco">
        <item>Ângulo de +20\u00B0 a -20\u00B0 </item>
        <item>Ângulo -20\u00B0 em ext.</item>
        <item>Ângulo de +20\u00B0 a +45\u00B0</item>
        <item>Ângulo de +45\u00B0 a +90\u00B0</item>
        <item>Ângulo superior a +90\u00B0</item>
    </string-array>
 <string name="chckboxRulaBraco1">Se o ombro estiver levantado</string>
 <string name="chckboxRulaBraco2">Se o ombro estiver em abdução</string>
 <string name="chckboxRulaBraco3">Se o ombro estiver apoiado</string>
<string name="tvRULAantebraco">Antebraço</string>
    <string-array name="RULAantebraco">
        <item>Ângulo de +60\u00B0 a +100\u00B0</item>
        <item>Ângulos de 0 a +60\u00B0 ou superior a +100\u00B0</item>
    </string-array>
    <string name="chckboxRulaABraco1">Se braço cruzar a linha média do corpo, ou se situar fora da linha a mais de 45\u00B0</string>
    <string name="tvRulaPunho">Punho</string>
    <string-array name="RULApunho">
        <item>Ângulo igual a 0\u00B0</item>
        <item>Ângulo de +15\u00B0 a -15\u00B0</item>
        <item>Ângulo superior a +15\u00B0 ou inferior a &lt;-15\u00B0</item>
    </string-array>
    <string name="chckboxRulaPunho1">Se desviado da linha neutra</string>
    <string name="tvRulaGiroPunho">Giro do Punho</string>
    <string-array name="RULAGiroPunho">
        <item>Principalmente na metade da amplitude de giro do punho</item>
        <item>No inicio ou final da amplitude de giro do punho</item>
    </string-array>
    <string name="tvRulaPosicaoPescoco">Posição do Pescoço</string>
    <string-array name="RulaPescoco">
        <item>Ângulo de 0\u00B0 a +10\u00B0</item>
        <item>Ângulo de +10\u00B0 a +20\u00B0</item>
        <item>Ângulo superior a +20\u00B0</item>
        <item>Em extensão</item>
    </string-array>
    <string name="chckboxRulaPescoco1">Se existir rotação</string>
    <string name="chckboxRulaPescoco2">Se existir inclinação</string>
    <string name="tvRulaPosicaoTronco">Posição do Tronco</string>
    <string-array name="RulaTronco">
        <item>Ângulo igual a 0\u00B0</item>
        <item>Ângulo e 0\u00B0 a +20\u00B0</item>
        <item>Ângulo de +20\u00B0 a +60\u00B0</item>
        <item>Ângulo superior a +60\u00B0</item>
    </string-array>
    <string name="chckboxRulaTronco1">Se torçao do tronco</string>
    <string name="chckboxRulaTronco2">Se inclinação do corpo</string>
    <string name="tvRulaPosicaoPernas">Posição das Pernas</string>
    <string-array name="RulaPernas">
        <item>Se pernas e os pés estão bem apoiados e equilibrados</item>
        <item>Se as pernas e os pés não estão correctamente apoiados e equilibrados</item>
    </string-array>
    <string name="tvRulaPontosMusculatura">Pontos de Musculatura:</string>
    <string name="checkBoxPontosMusculatura">Se postura é principalmente estática ou se actividade repetitiva</string>
    <string name="nenhumPontosMusculatura">Não apresenta defeito</string>
    <string name="tvPontosForca">Pontos de força ou carga</string>
    <string-array name="RulaPontosDeForcaCarga">
        <item>Inferir a 2Kg</item>
        <item>De 2Kg a 10 Kg (itermitente)</item>
        <item>De 2Kg a 10 Kg (estático ou repetido)</item>
        <item>Superior a 10Kg ou repetida ou de impacto</item>
    </string-array>
    <string name="title_activity_sistema_reba">SistemaRebaActivity</string>
    <string name="title_activity_sistema_reba2">Sistema Reba</string>
    <string name="tvRebaTronco">Tronco</string>
    <string-array name="RebaTronco">
        <item>Erecto</item>
        <item>Flexão  0\u00B0-20\u00B0 ou Extensão 0\u00B0-20\u00B0</item>
        <item>Flexão 20\u00B0-60\u00B0 ou Extensão >20\u00B0</item>
        <item>Flexão > 60\u00B0</item>
    </string-array>
    <string name="chckboxRebaCorrecaoTronco">Se houver rotação ou flexão do tronco</string>
    <string name="tvRebaPescoco">Pescoço</string>
    <string-array name="RebaPescoco">
        <item>Flexão 0\u00B0-20\u00B0</item>
        <item>Flexão ou Extensão >20\u00B0</item>
    </string-array>
    <string name="chckboxRebaCorrecaoPescoco">Se houver rotação ou flexão lateral do pescoço</string>
    <string name="tvRebaPernas">Pernas</string>
    <string-array name="RebaPernas">
        <item>Peso bilateral, andando ou sentado</item>
        <item>Peso unilateral ou postura instável</item>
    </string-array>
    <string name="chckboxRebaCorrecaoPernas1">Se flexão dos joelhos entre 30\u00B0 e 60\u00B0</string>
    <string name="chckboxRebaCorrecaoPernas2">Se a flexão dos joelhos >60º</string>
    <string name="tvRebaPontucaoCarga">Pontuação da Carga</string>
    <string-array name="RebaForca">
        <item>Carga inferior a 5Kg</item>
        <item>Carga entre 5Kg e 10Kg</item>
        <item>Carga superior a 10Kg</item>
    </string-array>
    <string name="chckboxRebaCorrecaoCarga">Se choque ou rápido desencadeamento da força</string>
    <string name="tvRebaBraco">Braço</string>
    <string-array name="RebaBraco">
        <item>Extensão 20\u00B0 a Flexão 20\u00B0</item>
        <item>Extensão > 20\u00B0 ou Flexão 20\u00B0 a 45\u00B0</item>
        <item>Flexão 45\u00B0 a 90\u00B0</item>
        <item>Flexão > 90\u00B0</item>
    </string-array>
    <string name="chckboxRebaCorrecaoBraco">Se houver adução ou rotação de braço</string>
    <string name="chckboxRebaCorrecaoBraco2">Se elevar o ombro</string>
    <string name="chckboxRebaCorrecaoBraco3">Se apoiado suportando peso do braço</string>
    <string name="tvRebaAnteBraco">Antebraço</string>
    <string-array name="RebaAntebraco">
        <item>Flexão 60\u00B0-100\u00B0</item>
        <item>Flexão &lt; 60\u00B0 ou Flexão > 100\u00B0</item>
    </string-array>
    <string name="tvRebaPulso">Pulso</string>
    <string-array name="RebaPulso">
        <item>Flexão/Extensão 0\u00B0 - 15\u00B0</item>
        <item>Flexão/Extensão > 15\u00B0</item>
    </string-array>
    <string name="chckboxRebaCorrecaoPulso">Se houver desvio ou rotação do pulso</string>
    <string name="tvRebaPega">Pontuação da Pega</string>
    <string-array name="RebaPega">
        <item>Boa, Pega bem ajustada e pega de potência</item>
        <item>Aceitável, Pega aceitável mas não é ideal ou a pega é aceitável por outra parte do corpo</item>
        <item>Má, Pega não aceitável apesar de possível</item>
        <item>Inaceitável, Difícil e inseguro, sem pegas ou pega inaceitável usando outras partes do corpo</item>
    </string-array>
    <string name="KimDescricao">Kim - Key Item Method </string>
    <string name="KimLevantarDescricao"> KIM (Levantar, Pegar e Transportar) </string>
    <string name="KimEmpurarDescricao"> KIM (Empurrar e Puxar) </string>
    <string name="tvKimLevantarPontuacaoTrabalho">Pontuação do Trabalho</string>
    <string name="tvKimLevantarTipoDeTrabalho">Tipo de Trabalho</string>
    <string name="GamElevacaoAderenciaCargaTitulo">Aderência à carga</string>
    <string name="GamElevacaoAderenciaCarga1">Boa\n -Contentores com puxadores ou pegas bem projectadas, adequadas para o efeito\n -Partes soltas permitindo uma pega confortável</string>
    <string name="GamElevacaoAderenciaCarga2">Razoável\n -Contentores com puxadores ou pegas fracas\n -Dedos imobilizados a 90º debaixo do contentor</string>
    <string name="GamElevacaoAderenciaCarga3">Fraca\n -Contentores mal projectados.\n -Peças soltas, objectos irrgulares, volumosos ou difíceis de pegar\n -Sacos não rígidos ou cargas imprevisíveis</string>
    <string name="GamElevacaoSuperficiePavimentoTitulo">Superfície do pavimento</string>
    <string name="GamElevacaoSuperficiePavimento1">Pavimento seco e limpo em boas condições</string>
    <string name="GamElevacaoSuperficiePavimento2">Pavimento seco e mas em fracas condições, gasto ou desnivelado</string>
    <string name="GamElevacaoSuperficiePavimento3">Pavimento sujo/húmido ou inclinado ou base instável</string>
    <string name="GamElevacaoOutrosFactoresTitulo">Outros fatores ambientais</string>
    <string name="GamElevacaoOutrosFactoresDescricao">Observe o ambiente de trabalho e pontue com base neste casos:\n  -Temperaruras extremes\n  -Fortes correntes de ar \nCondição de luminusidade: \n      -Escuro\n     -Luminoso,pouco contraste</string>
    <string name="GamElevacaoOutrosFactoresSubtitulo">Número de fatores de risco</string>
    <string name="GamElevacaoOutrosFactoresOpcao0">Nenhum</string>
    <string name="GamElevacaoOutrosFactoresOpcao1">Um</string>
    <string name="GamElevacaoOutrosFactoresOpcao2">Vários</string>
</resources>