<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_sistema_mac_elevacao3"
    tools:context="dei.estg.ipleiria.pt.ergodigital.SistemaMacElevacao3Activity"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/GamElevacaoAderenciaCargaTitulo"
                android:id="@+id/txtViewMacElevacaoAderenciaCargaTitulo" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:id="@+id/rgGamElevacaoAderenciaCarga">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GamElevacaoAderenciaCarga1"
                    android:id="@+id/rbGamElevacaoAderenciaCarga1"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GamElevacaoAderenciaCarga2"
                    android:id="@+id/rbGamElevacaoAderenciaCarga2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GamElevacaoAderenciaCarga3"
                    android:id="@+id/rbGamElevacaoAderenciaCarga3" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/GamElevacaoSuperficiePavimentoTitulo"
                android:id="@+id/txtViewGamElevacaoSuperficiePavimentoTitulo" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:id="@+id/rgGamElevacaoSuperficiePavimento">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GamElevacaoSuperficiePavimento1"
                    android:id="@+id/rbGamElevacaoSuperficiePavimento1"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GamElevacaoSuperficiePavimento2"
                    android:id="@+id/rbGamElevacaoSuperficiePavimento2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GamElevacaoSuperficiePavimento3"
                    android:id="@+id/rbGamElevacaoSuperficiePavimento3" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/GamElevacaoOutrosFactoresTitulo"
                android:id="@+id/txtViewGamElevacaoOutrosFactoresTitulo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/GamElevacaoOutrosFactoresDescricao"
                android:id="@+id/txtViewGamElevacaoOutrosFactoresDescricao"
                android:inputType="textMultiLine"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/GamElevacaoOutrosFactoresSubtitulo"
                android:id="@+id/txtViewGamElevacaoOutrosFactoresSubtitulo" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:id="@+id/rgGamElevacaoOutrosFactores">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GamElevacaoOutrosFactoresOpcao0"
                    android:id="@+id/rbGamElevacaoOutrosFactoresOpcao0" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GamElevacaoOutrosFactoresOpcao1"
                    android:id="@+id/rbGamElevacaoOutrosFactoresOpcao1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GamElevacaoOutrosFactoresOpcao2"
                    android:id="@+id/rbGamElevacaoOutrosFactoresOpcao2" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="50dp"></LinearLayout>
    </LinearLayout>
</ScrollView>
